# Reflection-and-transparency-demo

./: CMakeLists-Linux.txt  CMakeLists.txt  README.md  README.txt  camera.xoj  compile.sh  debug.sh  gdb.txt  imgui.ini  math-draft.xoj  run.sh  stencil_note.xopp  workspace.xoj
Xournals/: draft.xoj  math-draft.xoj
include/: camera.h  debug_info.h  gl_context.h  gl_object.h  gl_program.h  gl_shader.h  gl_texture.h  gl_vao.h  gl_vbo.h  glw_model.h  handleInput.h  light_model.h  model.h  object.h  runtime_error.h  runtime_except.h  scene.h  shader.h  worldSpace_camera.h
model/mirror/: 14321_Rectangular_Mirror-white_v1_l1.mtl
shader/: fragment.glsl  generic.vert  generic_noMat.frag  grass.frag  light_frag.glsl  vertex.glsl
src/: camera.cpp  fragment.glsl  gl_context.cpp  gl_object.cpp  gl_program.cpp  gl_shader.cpp  gl_texture.cpp  gl_vao.cpp  gl_vbo.cpp  glad.c  glw_model.cpp  handleInput.cpp  light_model.cpp  main.cpp  model.cpp  model_implement_multidraw  remove_func.txt  runtime_except.cpp  todo.txt  vertex.glsl
